# ttt-claude

./: Makefile  README.md  main.py  pyproject.toml
core/: ttt.py
tests/: test_hello.py  test_ttt.py
